force-app/main/default/objects/Opportunity/fields/Evaluador__c.field-meta.xml
<CustomField>
    <fullName>Evaluador__c</fullName>
    <label>Evaluador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alejandro Rugama</fullName>
            </value>
            <value>
                <fullName>Allan Lopez</fullName>
            </value>
            <value>
                <fullName>Ernesto Arguello</fullName>
            </value>
            <value>
                <fullName>Ernesto Gutierrez</fullName>
            </value>
            <value>
                <fullName>Maryoli Membreno</fullName>
            </value>
            <value>
                <fullName>Ismael Barahona</fullName>
            </value>
            <value>
                <fullName>Pastor Blandon</fullName>
            </value>
            <value>
                <fullName>Sergio Gutierrez M</fullName>
            </value>
            <value>
                <fullName>Jose Acevedo</fullName>
            </value>
            <value>
                <fullName>Irvin Guerrero</fullName>
            </value>
            <value>
                <fullName>Jose Noel Rivera</fullName>
            </value>
            <value>
                <fullName>Guillermo Ramirez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>