force-app/main/default/objects/Opportunity/fields/Existen_Informes__c.field-meta.xml
<CustomField>
    <fullName>Existen_Informes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existen Informes</label>
    <type>Checkbox</type>
</CustomField>