force-app/main/default/objects/Opportunity/fields/Fecha_de_Auditoria_Exitosa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Auditoria_Exitosa__c</fullName>
    <label>Fecha de Auditoria Exitosa</label>
    <type>Date</type>
</CustomField>