force-app/main/default/objects/Opportunity/fields/Fecha_de_Aval_o__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aval_o__c</fullName>
    <label>Fecha de Avalúo</label>
    <type>Date</type>
</CustomField>