force-app/main/default/objects/Opportunity/fields/Fecha_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Compra__c</fullName>
    <description>Fecha Estimada de Compra</description>
    <label>Fecha de Compra</label>
    <type>Date</type>
</CustomField>