force-app/main/default/objects/Opportunity/fields/Fecha_de_entrega_APV__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega_APV__c</fullName>
    <label>Fecha de entrega (APV)</label>
    <type>Date</type>
</CustomField>