force-app/main/default/objects/Opportunity/fields/Fecha_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_facturacion__c</fullName>
    <label>Fecha de facturación</label>
    <type>DateTime</type>
</CustomField>