force-app/main/default/objects/Opportunity/fields/Fecha_de_formalizacion_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_formalizacion_Financiamiento__c</fullName>
    <label>Fecha de formalización Financiamiento</label>
    <type>Date</type>
</CustomField>