force-app/main/default/objects/Opportunity/fields/Fecha_de_primera_llamada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_primera_llamada__c</fullName>
    <label>Fecha de primera llamada</label>
    <type>Date</type>
</CustomField>