force-app/main/default/objects/Opportunity/fields/Fecha_de_venta_gps__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_venta_gps__c</fullName>
    <label>Fecha de venta gps</label>
    <type>Date</type>
</CustomField>