force-app/main/default/objects/Opportunity/fields/Fecha_de_Venta_PMP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Venta_PMP__c</fullName>
    <label>Fecha de Venta PMP</label>
    <type>Date</type>
</CustomField>