force-app/main/default/objects/Opportunity/fields/Fecha_de_venta_seguro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_venta_seguro__c</fullName>
    <label>Fecha de venta seguro</label>
    <type>Date</type>
</CustomField>