force-app/main/default/objects/Opportunity/fields/Fecha_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_visita__c</fullName>
    <description>Para que anfitrion llene alimente cada que visite el cliente</description>
    <label>Fecha de visita</label>
    <type>Date</type>
</CustomField>