force-app/main/default/objects/Opportunity/fields/Fecha_que_toca_llamar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_que_toca_llamar__c</fullName>
    <formula>CreatedDate +14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha que toca llamar</label>
    <type>Date</type>
</CustomField>