force-app/main/default/objects/Opportunity/fields/Fecha_vencimiento_tarea__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vencimiento_tarea__c</fullName>
    <description>Campo alimentado por flujo de última tarea de oportunidad</description>
    <label>Fecha vencimiento tarea</label>
    <type>Date</type>
</CustomField>