force-app/main/default/objects/Opportunity/fields/Financiamiento_con__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_con__c</fullName>
    <label>Financiamiento con:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avanz</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>Banpro</fullName>
            </value>
            <value>
                <fullName>Ciclo CP</fullName>
            </value>
            <value>
                <fullName>Compra de Contado</fullName>
            </value>
            <value>
                <fullName>Go Leasing</fullName>
            </value>
            <value>
                <fullName>Lafise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>