force-app/main/default/objects/Opportunity/fields/Flecha__c.field-meta.xml
<CustomField>
    <fullName>Flecha__c</fullName>
    <label>Flecha</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Malo</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>