force-app/main/default/objects/Opportunity/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Financiamiento Bancario</fullName>
            </value>
            <value>
                <fullName>Ciclo Casa Pellas</fullName>
            </value>
            <value>
                <fullName>Go Leasing</fullName>
            </value>
            <value>
                <fullName>Aún no desea realizar su compra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>