force-app/main/default/objects/Opportunity/fields/Forma_de_Pago_GPS__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago_GPS__c</fullName>
    <label>Forma de Pago GPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepagado 1 año</fullName>
            </value>
            <value>
                <fullName>Prepagado 2 año</fullName>
            </value>
            <value>
                <fullName>Prepagado 3 año</fullName>
            </value>
            <value>
                <fullName>Prepagado 4 año</fullName>
            </value>
            <value>
                <fullName>Prepagado 5 año</fullName>
            </value>
            <value>
                <fullName>Mensualidades</fullName>
            </value>
            <value>
                <fullName>Mensualidades incluyendo equipo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>