force-app/main/default/objects/Opportunity/fields/Forma_de_Pago_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago_Multiple__c</fullName>
    <label>Forma de Adquisición</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Financiamiento Bancario</fullName>
            </value>
            <value>
                <fullName>Ciclo Casa Pellas</fullName>
            </value>
            <value>
                <fullName>Go Leasing</fullName>
            </value>
            <value>
                <fullName>Financiamiento</fullName>
            </value>
            <value>
                <fullName>Tasa 0</fullName>
            </value>
            <value>
                <fullName>Aun no desea realizar su compra</fullName>
                <label>Aún no desea realizar su compra</label>
            </value>
            <value>
                <fullName>Consumo Interno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>