force-app/main/default/objects/Opportunity/fields/Forma_de_Pago_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago_Seguro__c</fullName>
    <label>Forma de Pago Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Cuotas</fullName>
            </value>
            <value>
                <fullName>Financiado</fullName>
            </value>
            <value>
                <fullName>Cortesía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>