force-app/main/default/objects/Opportunity/fields/Forma_de_Pago_UAF__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago_UAF__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Depósitos bancarios</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Transferencia bancaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>