force-app/main/default/objects/Opportunity/fields/Generada_desde_Lead__c.field-meta.xml
<CustomField>
    <fullName>Generada_desde_Lead__c</fullName>
    <label>Oportunidad Generada desde Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>