force-app/main/default/objects/Opportunity/fields/Gravamen__c.field-meta.xml
<CustomField>
    <fullName>Gravamen__c</fullName>
    <label>Gravamen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>