force-app/main/default/objects/Opportunity/fields/Ha_comprando_en_CP_anteriormente__c.field-meta.xml
<CustomField>
    <fullName>Ha_comprando_en_CP_anteriormente__c</fullName>
    <label>Ha comprando en CP anteriormente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>