force-app/main/default/objects/Opportunity/fields/Horario_ultima_tarea_completada__c.field-meta.xml
<CustomField>
    <fullName>Horario_ultima_tarea_completada__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Horario ultima tarea completada</label>
    <type>DateTime</type>
</CustomField>