force-app/main/default/objects/Opportunity/fields/Id_de_oportunidad_para_APV__c.field-meta.xml
<CustomField>
    <fullName>Id_de_oportunidad_para_APV__c</fullName>
    <label>Id de oportunidad para APV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>