force-app/main/default/objects/Opportunity/fields/Id_Ultima_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Id_Ultima_Actividad__c</fullName>
    <description>Id de la última actividad de la oportunidad traído mediante un FLOW</description>
    <label>Id Ultima Actividad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>