force-app/main/default/objects/Opportunity/fields/Identificaci_n_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Identificaci_n_oportunidad__c</fullName>
    <formula>Account.Cedula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificación</label>
    <type>Text</type>
</CustomField>