force-app/main/default/objects/Opportunity/fields/Inactividad__c.field-meta.xml
<CustomField>
    <fullName>Inactividad__c</fullName>
    <description>Para mostrar indicadores de inactividad</description>
    <label>Inactividad</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>