force-app/main/default/objects/Opportunity/fields/Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Inactivo__c</fullName>
    <description>Días inactivo</description>
    <formula>IF(
 AND(
  NOT(ISPICKVAL(StageName, &apos;Cerrada ganada&apos;)),
  NOT(ISPICKVAL(StageName, &apos;Cerrada perdida&apos;))
 ),

 IF(
  (
    OR(
       (DATEVALUE(Horario_ultima_tarea_completada__c) + 1) &gt;= TODAY(), 
       AND(Fecha_vencimiento_tarea__c &gt;= TODAY(), Tiene_chasis_reservado__c)
    )
  ),
  IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683k000009FuMI&amp;operationContext=CHATTER&amp;contentId=05T3k00000z2AOa&quot;, &quot;Verde&quot;, 20,20)&amp;&quot; &quot;&amp;TEXT(FLOOR(TODAY() - DATEVALUE(Horario_ultima_tarea_completada__c))) &amp; &quot; Días &quot;,
  IF (
     (DATEVALUE(Horario_ultima_tarea_completada__c) + 4) &gt;= TODAY(),
     IMAGE(&quot;/servlet/servlet.FileDownload?file=0153k00000AfTm3&quot;, &quot;Amarillo&quot;, 20,20)&amp; &quot; &quot; &amp; TEXT(FLOOR(TODAY() - DATEVALUE(Horario_ultima_tarea_completada__c))) &amp; &quot; Días &quot;,
     IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683k000009FuNB&amp;operationContext=CHATTER&amp;contentId=05T3k00000z2ARj&quot;, &quot;Rojo&quot;, 20,20)&amp; &quot; &quot; &amp; TEXT(FLOOR(TODAY() - DATEVALUE(Horario_ultima_tarea_completada__c))) &amp; &quot; Días &quot;)),

 &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactivo</label>
    <type>Text</type>
</CustomField>