force-app/main/default/objects/Opportunity/fields/Inactivo_op__c.field-meta.xml
<CustomField>
    <fullName>Inactivo_op__c</fullName>
    <description>Campo para uso de vista de lista, saber que oportunidades tienen sin seguimiento desde un período dado</description>
    <formula>IF( 
   AND(
       NOT(ISPICKVAL(StageName, &apos;Cerrada ganada&apos;)),
       NOT(ISPICKVAL(StageName, &apos;Cerrada perdida&apos;))
       ),

      TODAY() -DATEVALUE(Horario_ultima_tarea_completada__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactivo(new)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>