force-app/main/default/objects/Opportunity/fields/Informe_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Informe_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informe aprobado</label>
    <type>Checkbox</type>
</CustomField>