force-app/main/default/objects/Opportunity/fields/Interno_Espera__c.field-meta.xml
<CustomField>
    <fullName>Interno_Espera__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para indicar que oportunidad de financiamiento interna</description>
    <label>Interno Espera</label>
    <type>Checkbox</type>
</CustomField>