force-app/main/default/objects/Opportunity/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <length>50</length>
    <type>Text</type>
</CustomField>