force-app/main/default/objects/Opportunity/fields/Km_Inicio_del_Plan__c.field-meta.xml
<CustomField>
    <fullName>Km_Inicio_del_Plan__c</fullName>
    <label>Km Inicio del Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>