force-app/main/default/objects/Opportunity/fields/L_nea_de_negocio_texto__c.field-meta.xml
<CustomField>
    <fullName>L_nea_de_negocio_texto__c</fullName>
    <label>Línea de negocio texto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>