force-app/main/default/objects/Opportunity/fields/L_neas_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>L_neas_de_Negocio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Líneas de Negocio</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor no existe o no coinciden los criterios de filtro. Insertar un valor valido para la línea de negocio</errorMessage>
        <filterItems>
            <field>Catalogo_UDC__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Lineas de negocio</value>
        </filterItems>
        <infoMessage>Insertar un valor de línea de negocio</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>