force-app/main/default/objects/Opportunity/fields/Linea_texto__c.field-meta.xml
<CustomField>
    <fullName>Linea_texto__c</fullName>
    <description>Campo almcenará via process el texto que se setee en la linea de negocio UDC. Tambien servirá para setear las sharing rules de Yamaha y Motores Marinos</description>
    <label>Linea texto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>