force-app/main/default/objects/Opportunity/fields/LLantas__c.field-meta.xml
<CustomField>
    <fullName>LLantas__c</fullName>
    <label>LLantas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelentes</fullName>
            </value>
            <value>
                <fullName>Buenas</fullName>
            </value>
            <value>
                <fullName>Regulares</fullName>
            </value>
            <value>
                <fullName>Malas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>