force-app/main/default/objects/Opportunity/fields/Mantenimiento_en_CP__c.field-meta.xml
<CustomField>
    <fullName>Mantenimiento_en_CP__c</fullName>
    <label>Mantenimiento en CP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>