force-app/main/default/objects/Opportunity/fields/Marca_detalle_de_perdida__c.field-meta.xml
<CustomField>
    <fullName>Marca_detalle_de_perdida__c</fullName>
    <label>Marca detalle de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Detalle_de_perdida__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hyundai - Deshon</fullName>
            </value>
            <value>
                <fullName>Hyundai - Excel</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Mitsubichi</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Toyota - CP</fullName>
            </value>
            <value>
                <fullName>Toyota -AN</fullName>
            </value>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>