force-app/main/default/objects/Opportunity/fields/Marca_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Marca_Intercambio__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>