force-app/main/default/objects/Opportunity/fields/Marca_UDC__c.field-meta.xml
<CustomField>
    <fullName>Marca_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (1 AND 3) OR (1 AND 4)</booleanFilter>
        <errorMessage>No tiene permitido seleccionar esa marca. Consulte a un administrador.</errorMessage>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marcas</value>
        </filterItems>
        <filterItems>
            <field>$User.Marca_texto__c</field>
            <operation>contains</operation>
            <valueField>Catalogo_UDC__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Principal Autolote</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Avalúo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Oportunidades (Marca)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>