force-app/main/default/objects/Opportunity/fields/Modelo_de_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo de Vehiculo</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.Marca_P__c</field>
            <operation>contains</operation>
            <valueField>$Source.Marca__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>