force-app/main/default/objects/Opportunity/fields/Modelo_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Intercambio__c</fullName>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>