force-app/main/default/objects/Opportunity/fields/Modelo_Principal__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Principal__c</fullName>
    <label>Modelo Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>