force-app/main/default/objects/Opportunity/fields/ModeloVehiculo__c.field-meta.xml
<CustomField>
    <fullName>ModeloVehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo Vehiculo UDC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Modelo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Oportunidades (Modelo Vehiculo UDC)</relationshipLabel>
    <relationshipName>UDCMODELO</relationshipName>
    <type>Lookup</type>
</CustomField>