force-app/main/default/objects/Opportunity/fields/Monto_a_Pagar_Seg_n_Tabla_de_Deprecaci_n__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_Pagar_Seg_n_Tabla_de_Deprecaci_n__c</fullName>
    <label>Monto a Pagar Según Tabla de Deprecación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>