force-app/main/default/objects/Opportunity/fields/Monto_seguro__c.field-meta.xml
<CustomField>
    <fullName>Monto_seguro__c</fullName>
    <label>Monto seguro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>