force-app/main/default/objects/Opportunity/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <label>Motor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Malo</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>