force-app/main/default/objects/Opportunity/fields/Motor_N__c.field-meta.xml
<CustomField>
    <fullName>Motor_N__c</fullName>
    <label>Motor N°</label>
    <length>15</length>
    <type>Text</type>
</CustomField>