force-app/main/default/objects/Opportunity/fields/Municipio_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Sucursal__c</fullName>
    <label>Municipio Sucursal</label>
    <type>TextArea</type>
</CustomField>