force-app/main/default/objects/Opportunity/fields/N_mero_de_tel_fono__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_tel_fono__c</fullName>
    <label>Número de teléfono</label>
    <type>Phone</type>
</CustomField>