force-app/main/default/objects/Opportunity/fields/Nivel_de_prioridad__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_prioridad__c</fullName>
    <label>Nivel de prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgente</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Frio</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>