force-app/main/default/objects/Opportunity/fields/No_contrato_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>No_contrato_Financiamiento__c</fullName>
    <label># contrato Financiamiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>