force-app/main/default/objects/Opportunity/fields/No_contrato_GPS__c.field-meta.xml
<CustomField>
    <fullName>No_contrato_GPS__c</fullName>
    <label># contrato GPS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>