force-app/main/default/objects/Opportunity/fields/No_Contrato_PMP__c.field-meta.xml
<CustomField>
    <fullName>No_Contrato_PMP__c</fullName>
    <label># Contrato PMP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>