force-app/main/default/objects/Opportunity/fields/No_de_Poliza__c.field-meta.xml
<CustomField>
    <fullName>No_de_Poliza__c</fullName>
    <label># de Póliza</label>
    <length>50</length>
    <type>Text</type>
</CustomField>