force-app/main/default/objects/Opportunity/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <formula>IF(Account.IsPersonAccount,  Account.FirstName &amp; &quot; &quot; &amp; Account.LastName, Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>