force-app/main/default/objects/Opportunity/fields/Numero_de_Circulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Circulaci_n__c</fullName>
    <label>Número de Circulación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>