force-app/main/default/objects/Opportunity/fields/Numero_de_Servicios_PMP__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Servicios_PMP__c</fullName>
    <label>Número de Servicios PMP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>