force-app/main/default/objects/Opportunity/fields/Numero_de_Vehiculos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Vehiculos__c</fullName>
    <label>Número de Vehículos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>