force-app/main/default/objects/Opportunity/fields/Observaciones_Mec_nica__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Mec_nica__c</fullName>
    <label>Observaciones Mecánica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>