force-app/main/default/objects/Opportunity/fields/Oferta_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Oferta_del_cliente__c</fullName>
    <label>Oferta del cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>