force-app/main/default/objects/Opportunity/fields/Oportunidad_APV__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_APV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad APV</label>
    <type>Checkbox</type>
</CustomField>