force-app/main/default/objects/Opportunity/fields/Oportunidad_duplicada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_duplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad duplicada</label>
    <type>Checkbox</type>
</CustomField>