force-app/main/default/objects/Opportunity/fields/Oportunidad_en_Financiamiento_Bancario__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_en_Financiamiento_Bancario__c</fullName>
    <label>Oportunidad en Financiamiento Bancario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>