force-app/main/default/objects/Opportunity/fields/Oportunidad_inactiva__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_inactiva__c</fullName>
    <label>Oportunidad inactiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>